# agent-gui

./: .gitignore  CITATION.cff  LICENSE  README.md  RELEASE_NOTES.md  dev.sh  environment.yml  install_profile.sh  pyproject.toml  start.sh  stop.sh
agent_gui/: __main__.py  activity_parser.py  agent_capabilities.py  agents.py  claude_state.py  claude_worker.py  db.py  desk_toolsets.py  file_parser.py  gui_config.py  hermes_worker.py  llm_backend.py  llm_models.py  message_sanitize.py  read_guard.py  server.py
agent_profiles/base/: .env.EXAMPLE  MEMORY.md  config.yaml  distribution.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  TeamRowPanelContext.tsx  activityOverviewModel.ts  agentRosterMeta.ts  avatarPrefs.ts  backendKind.test.ts  backendKind.ts  deskConfig.test.ts  deskConfig.ts  deskPanelAnchor.ts  featureFlags.ts  floatingPanelStack.ts  main.tsx  rosterLayout.ts  sounds.ts  (+8 more)
tests/: test_activity_parser.py  test_agent_capabilities.py  test_agents.py  test_claude_oauth_only.py  test_claude_state.py  test_count_tokens.py  test_db_title.py  test_desk_history.py  test_desk_logs.py  test_desk_overview.py  test_desk_toolsets.py  test_event_time_persistence.py  test_feed_orphans.py  test_file_parser.py  test_flush_watermark.py  test_gui_config.py  test_llm_backend.py  test_llm_models.py  test_message_sanitize.py  test_path_confinement.py  test_pipeline.py  test_read_guard.py  test_realtime_markers.py  test_regressions.py  test_server.py  test_team_repo_writes.py  test_worker_thinking.py  test_workspace_open.py
(+79 files in other folders)
