[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-gui"
version = "0.1.0"
description = "Pixel-art office GUI for observing and steering local AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "websockets==16.0",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "aiofiles==25.1.0",
    "python-multipart==0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "requests>=2.31",
]

[project.scripts]
agent-gui = "agent_gui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_gui*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
